feat(theme): Improve Theme Manager tu support several stages (window).